force-app/main/default/objects/Recipe__c/fields/Calories_Per_Serving__c.field-meta.xml
<CustomField>
    <fullName>Calories_Per_Serving__c</fullName>
    <label>Calories Per Serving</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>