force-app/main/default/objects/Recipe__c/fields/Cook_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Cook_Time_Minutes__c</fullName>
    <label>Cook Time (Minutes)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>