force-app/main/default/objects/Recipe__c/fields/Ingredients__c.field-meta.xml
<CustomField>
    <fullName>Ingredients__c</fullName>
    <label>Ingredients</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>