force-app/main/default/objects/Recipe__c/fields/Recipe_ID__c.field-meta.xml
<CustomField>
    <fullName>Recipe_ID__c</fullName>
    <externalId>true</externalId>
    <label>Recipe ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>