force-app/main/default/objects/Recipe__c/fields/Servings__c.field-meta.xml
<CustomField>
    <fullName>Servings__c</fullName>
    <label>Servings</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>