force-app/main/default/objects/Recipe__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Recipe_ID__c</columns>
    <columns>Cook_Time_Minutes__c</columns>
    <columns>Servings__c</columns>
    <columns>Calories_Per_Serving__c</columns>
    <columns>Tags__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Recipes</label>
</ListView>